--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -206,7 +206,8 @@
     "Pillager": true,
     "InvisiimmortalEntity": true,
     "GoblinFearEntity": true,
-    "FlutterflyEntity": true
+    "FlutterflyEntity": true,
+    "Husk": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -321,7 +322,8 @@
     "Pillager": false,
     "InvisiimmortalEntity": false,
     "GoblinFearEntity": false,
-    "FlutterflyEntity": false
+    "FlutterflyEntity": false,
+    "Husk": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -384,6 +386,7 @@
     "ThehorrorsEntity": 45.0,
     "ZombifiedRabbit": 8.0,
     "EntityWroughtnaut": 40.0,
-    "VampflyerEntity": 30.0
+    "VampflyerEntity": 30.0,
+    "Husk": 20.0
   }
 }
