--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -207,7 +207,10 @@
     "InvisiimmortalEntity": true,
     "GoblinFearEntity": true,
     "FlutterflyEntity": true,
-    "Husk": true
+    "Husk": true,
+    "MaggotEntity": true,
+    "SiameseSkeletonsrightEntity": true,
+    "SiameseSkeletonsleftEntity": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -323,7 +326,10 @@
     "InvisiimmortalEntity": false,
     "GoblinFearEntity": false,
     "FlutterflyEntity": false,
-    "Husk": false
+    "Husk": false,
+    "MaggotEntity": false,
+    "SiameseSkeletonsrightEntity": false,
+    "SiameseSkeletonsleftEntity": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -387,6 +393,11 @@
     "ZombifiedRabbit": 8.0,
     "EntityWroughtnaut": 40.0,
     "VampflyerEntity": 30.0,
-    "Husk": 20.0
+    "Husk": 20.0,
+    "SwarmerEntity": 40.0,
+    "SkeletonThrasherEntity": 50.0,
+    "ThewolfEntity": 45.0,
+    "TheswarmerEntity": 45.0,
+    "TheordureEntity": 25.0
   }
 }
