--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -3,8 +3,16 @@
   "initialBlockRegenDelayMillis": 5000,
   "blockRegenIntervalMillis": 1000,
   "debugMode": false,
-  "bannedBlocks": {},
-  "bannedItems": {},
+  "bannedBlocks": {
+    "minecraft:stone": false,
+    "minecraft:snow": false,
+    "minecraft:snow_block": false,
+    "minecraft:powder_snow": false
+  },
+  "bannedItems": {
+    "minecraft:air": false,
+    "tombstone:gift": false
+  },
   "disableForAllTileEntities": false,
   "disableAutoRegisterNames": false
 }
