--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -4,13 +4,40 @@
   "blockRegenIntervalMillis": 1000,
   "debugMode": false,
   "bannedBlocks": {
+    "minecraft:crafting_table": false,
+    "minecraft:spruce_leaves": false,
+    "minecraft:spruce_planks": false,
+    "minecraft:andesite": false,
+    "minecraft:dirt": false,
+    "minecraft:granite": false,
+    "minecraft:white_wool": false,
+    "minecraft:cobblestone": false,
+    "iceandfire:dread_stone_bricks_cracked": false,
+    "minecraft:grass_block": false,
+    "minecraft:coal_ore": false,
+    "minecraft:copper_ore": false,
     "minecraft:stone": false,
     "minecraft:snow": false,
+    "iceandfire:dread_stone_bricks_mossy": false,
     "minecraft:snow_block": false,
-    "minecraft:powder_snow": false
+    "minecraft:spruce_log": false,
+    "minecraft:powder_snow": false,
+    "iceandfire:dread_stone_bricks": false,
+    "iceandfire:dread_spawner": false
   },
   "bannedItems": {
+    "minecraft:mutton": false,
+    "minecraft:stone_axe": false,
+    "minecraft:dirt": false,
+    "minecraft:stone_sword": false,
+    "minecraft:cobblestone": false,
+    "minecraft:wooden_axe": false,
+    "tombstone:grave_key": false,
     "minecraft:air": false,
+    "minecraft:spruce_log": false,
+    "minecraft:wooden_pickaxe": false,
+    "minecraft:stone_pickaxe": false,
+    "iceandfire:dragonbone": false,
     "tombstone:gift": false
   },
   "disableForAllTileEntities": false,
