--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -210,7 +210,15 @@
     "Husk": true,
     "MaggotEntity": true,
     "SiameseSkeletonsrightEntity": true,
-    "SiameseSkeletonsleftEntity": true
+    "SiameseSkeletonsleftEntity": true,
+    "TrollenragedEntity": true,
+    "HouseflyEntity": true,
+    "Illusioner": true,
+    "FrostGolemEntity": true,
+    "EntityDreadThrall": true,
+    "EntityDreadScuttler": true,
+    "EntityDreadGhoul": true,
+    "EntityDreadKnight": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -329,7 +337,15 @@
     "Husk": false,
     "MaggotEntity": false,
     "SiameseSkeletonsrightEntity": false,
-    "SiameseSkeletonsleftEntity": false
+    "SiameseSkeletonsleftEntity": false,
+    "TrollenragedEntity": false,
+    "HouseflyEntity": false,
+    "Illusioner": false,
+    "FrostGolemEntity": false,
+    "EntityDreadThrall": false,
+    "EntityDreadScuttler": false,
+    "EntityDreadGhoul": false,
+    "EntityDreadKnight": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -398,6 +414,18 @@
     "SkeletonThrasherEntity": 50.0,
     "ThewolfEntity": 45.0,
     "TheswarmerEntity": 45.0,
-    "TheordureEntity": 25.0
+    "TheordureEntity": 25.0,
+    "InvisicloggerEntity": 100.0,
+    "CaveEnderman": 40.0,
+    "Propball1Entity": 4.0,
+    "EquestrianEntity": 32.0,
+    "DarkVortexEntity": 35.0,
+    "EntityTroll": 50.0,
+    "SnowyEnderman": 35.0,
+    "MaggotEntity": 6.0,
+    "HouseflyEntity": 4.0,
+    "ThesomnolenceEntity": 10.0,
+    "EntityDreadKnight": 40.0,
+    "EntityDreadThrall": 20.0
   }
 }
