--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -218,7 +218,10 @@
     "EntityDreadThrall": true,
     "EntityDreadScuttler": true,
     "EntityDreadGhoul": true,
-    "EntityDreadKnight": true
+    "EntityDreadKnight": true,
+    "Slime": true,
+    "MutantEnderman": true,
+    "IceSpikesEnderman": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -345,7 +348,10 @@
     "EntityDreadThrall": false,
     "EntityDreadScuttler": false,
     "EntityDreadGhoul": false,
-    "EntityDreadKnight": false
+    "EntityDreadKnight": false,
+    "Slime": false,
+    "MutantEnderman": false,
+    "IceSpikesEnderman": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -426,6 +432,7 @@
     "HouseflyEntity": 4.0,
     "ThesomnolenceEntity": 10.0,
     "EntityDreadKnight": 40.0,
-    "EntityDreadThrall": 20.0
+    "EntityDreadThrall": 20.0,
+    "BoulderingDrowned": 20.0
   }
 }
