--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -4,25 +4,38 @@
   "blockRegenIntervalMillis": 1000,
   "debugMode": false,
   "bannedBlocks": {
+    "minecraft:blue_ice": false,
     "minecraft:crafting_table": false,
+    "minecraft:dark_oak_stairs": false,
+    "minecraft:quartz_block": false,
+    "minecraft:dirt": false,
+    "minecraft:grass_block": false,
+    "minecraft:coal_ore": false,
+    "iceandfire:dread_stone_bricks_mossy": false,
+    "minecraft:snow_block": false,
+    "minecraft:ice": false,
+    "minecraft:air": false,
+    "iceandfire:dread_stone_bricks": false,
     "minecraft:spruce_leaves": false,
     "minecraft:spruce_planks": false,
     "minecraft:andesite": false,
-    "minecraft:dirt": false,
+    "minecraft:spruce_fence": false,
+    "minecraft:dark_oak_planks": false,
     "minecraft:granite": false,
     "minecraft:white_wool": false,
     "minecraft:cobblestone": false,
     "iceandfire:dread_stone_bricks_cracked": false,
-    "minecraft:grass_block": false,
-    "minecraft:coal_ore": false,
+    "minecraft:brown_carpet": false,
     "minecraft:copper_ore": false,
+    "iceandfire:dread_stone_stairs": false,
+    "minecraft:cobblestone_stairs": false,
     "minecraft:stone": false,
+    "minecraft:sand": false,
     "minecraft:snow": false,
-    "iceandfire:dread_stone_bricks_mossy": false,
-    "minecraft:snow_block": false,
+    "minecraft:stripped_spruce_log": false,
     "minecraft:spruce_log": false,
+    "minecraft:spruce_trapdoor": false,
     "minecraft:powder_snow": false,
-    "iceandfire:dread_stone_bricks": false,
     "iceandfire:dread_spawner": false
   },
   "bannedItems": {
@@ -32,6 +45,7 @@
     "minecraft:stone_sword": false,
     "minecraft:cobblestone": false,
     "minecraft:wooden_axe": false,
+    "minecraft:gold_ingot": false,
     "tombstone:grave_key": false,
     "minecraft:air": false,
     "minecraft:spruce_log": false,
