--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -221,7 +221,9 @@
     "EntityDreadKnight": true,
     "Slime": true,
     "MutantEnderman": true,
-    "IceSpikesEnderman": true
+    "IceSpikesEnderman": true,
+    "EntityNaga": true,
+    "EntityGorgon": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -351,7 +353,9 @@
     "EntityDreadKnight": false,
     "Slime": false,
     "MutantEnderman": false,
-    "IceSpikesEnderman": false
+    "IceSpikesEnderman": false,
+    "EntityNaga": false,
+    "EntityGorgon": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -433,6 +437,8 @@
     "ThesomnolenceEntity": 10.0,
     "EntityDreadKnight": 40.0,
     "EntityDreadThrall": 20.0,
-    "BoulderingDrowned": 20.0
+    "BoulderingDrowned": 20.0,
+    "SilverqueenattackingEntity": 30.0,
+    "NightmareStalkerEntity": 70.0
   }
 }
