--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -4,49 +4,86 @@
   "blockRegenIntervalMillis": 1000,
   "debugMode": false,
   "bannedBlocks": {
-    "minecraft:blue_ice": false,
     "minecraft:crafting_table": false,
+    "minecraft:oak_log": false,
+    "minecraft:dark_oak_fence_gate": false,
     "minecraft:dark_oak_stairs": false,
     "minecraft:quartz_block": false,
-    "minecraft:dirt": false,
+    "minecraft:stone_pressure_plate": false,
     "minecraft:grass_block": false,
     "minecraft:coal_ore": false,
-    "iceandfire:dread_stone_bricks_mossy": false,
-    "minecraft:snow_block": false,
-    "minecraft:ice": false,
+    "minecraft:white_carpet": false,
+    "iceandfire:copper_pile": false,
     "minecraft:air": false,
-    "iceandfire:dread_stone_bricks": false,
-    "minecraft:spruce_leaves": false,
-    "minecraft:spruce_planks": false,
-    "minecraft:andesite": false,
+    "quark:yellow_blossom_leaves": false,
+    "minecraft:stone_bricks": false,
+    "minecraft:spruce_door": false,
     "minecraft:spruce_fence": false,
-    "minecraft:dark_oak_planks": false,
     "minecraft:granite": false,
-    "minecraft:white_wool": false,
+    "minecraft:dark_oak_door": false,
+    "minecraft:oak_leaves": false,
+    "minecraft:stone_brick_slab": false,
+    "minecraft:polished_andesite_slab": false,
+    "minecraft:lantern": false,
     "minecraft:cobblestone": false,
-    "iceandfire:dread_stone_bricks_cracked": false,
     "minecraft:brown_carpet": false,
-    "minecraft:copper_ore": false,
+    "minecraft:cobweb": false,
     "iceandfire:dread_stone_stairs": false,
     "minecraft:cobblestone_stairs": false,
     "minecraft:stone": false,
+    "minecraft:coal_block": false,
     "minecraft:sand": false,
     "minecraft:snow": false,
     "minecraft:stripped_spruce_log": false,
+    "minecraft:red_bed": false,
+    "minecraft:glass_pane": false,
+    "iceandfire:dread_spawner": false,
+    "minecraft:oak_trapdoor": false,
+    "minecraft:blue_ice": false,
+    "minecraft:iron_block": false,
+    "minecraft:dirt": false,
+    "minecraft:oak_slab": false,
+    "iceandfire:gold_pile": false,
+    "iceandfire:dread_stone_bricks_mossy": false,
+    "minecraft:snow_block": false,
+    "minecraft:ice": false,
+    "minecraft:spruce_slab": false,
+    "iceandfire:dread_stone_bricks": false,
+    "iceandfire:silver_pile": false,
+    "minecraft:oak_planks": false,
+    "minecraft:spruce_leaves": false,
+    "minecraft:spruce_planks": false,
+    "minecraft:andesite": false,
+    "minecraft:dark_oak_planks": false,
+    "minecraft:dirt_path": false,
+    "minecraft:white_wool": false,
+    "iceandfire:dread_stone_bricks_cracked": false,
+    "minecraft:campfire": false,
+    "minecraft:copper_ore": false,
+    "minecraft:light_gray_carpet": false,
     "minecraft:spruce_log": false,
     "minecraft:spruce_trapdoor": false,
     "minecraft:powder_snow": false,
-    "iceandfire:dread_spawner": false
+    "minecraft:white_bed": false
   },
   "bannedItems": {
     "minecraft:mutton": false,
     "minecraft:stone_axe": false,
+    "minecraft:oak_log": false,
+    "minecraft:spruce_planks": false,
+    "minecraft:iron_block": false,
     "minecraft:dirt": false,
+    "minecraft:stick": false,
+    "minecraft:lantern": false,
     "minecraft:stone_sword": false,
     "minecraft:cobblestone": false,
     "minecraft:wooden_axe": false,
     "minecraft:gold_ingot": false,
+    "minecraft:red_bed": false,
+    "minecraft:bread": false,
     "tombstone:grave_key": false,
+    "minecraft:emerald": false,
+    "minecraft:cooked_mutton": false,
     "minecraft:air": false,
     "minecraft:spruce_log": false,
     "minecraft:wooden_pickaxe": false,
