--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -223,7 +223,8 @@
     "MutantEnderman": true,
     "IceSpikesEnderman": true,
     "EntityNaga": true,
-    "EntityGorgon": true
+    "EntityGorgon": true,
+    "FlowerFieldsEnderman": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -355,7 +356,8 @@
     "MutantEnderman": false,
     "IceSpikesEnderman": false,
     "EntityNaga": false,
-    "EntityGorgon": false
+    "EntityGorgon": false,
+    "FlowerFieldsEnderman": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -439,6 +441,8 @@
     "EntityDreadThrall": 20.0,
     "BoulderingDrowned": 20.0,
     "SilverqueenattackingEntity": 30.0,
-    "NightmareStalkerEntity": 70.0
+    "NightmareStalkerEntity": 70.0,
+    "BarrelZombieEntity": 30.0,
+    "MutantCreeper": 120.0
   }
 }
