--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -10,12 +10,14 @@
     "minecraft:dark_oak_stairs": false,
     "minecraft:quartz_block": false,
     "minecraft:stone_pressure_plate": false,
+    "minecraft:mossy_cobblestone": false,
     "minecraft:grass_block": false,
     "minecraft:coal_ore": false,
     "minecraft:white_carpet": false,
     "iceandfire:copper_pile": false,
     "minecraft:air": false,
     "quark:yellow_blossom_leaves": false,
+    "iceandfire:chared_dirt": false,
     "minecraft:stone_bricks": false,
     "minecraft:spruce_door": false,
     "minecraft:spruce_fence": false,
@@ -38,12 +40,16 @@
     "minecraft:red_bed": false,
     "minecraft:glass_pane": false,
     "iceandfire:dread_spawner": false,
+    "iceandfire:chared_gravel": false,
     "minecraft:oak_trapdoor": false,
+    "minecraft:oak_door": false,
     "minecraft:blue_ice": false,
+    "iceandfire:chared_grass": false,
     "minecraft:iron_block": false,
     "minecraft:dirt": false,
     "minecraft:oak_slab": false,
     "iceandfire:gold_pile": false,
+    "minecraft:glass": false,
     "iceandfire:dread_stone_bricks_mossy": false,
     "minecraft:snow_block": false,
     "minecraft:ice": false,
@@ -67,28 +73,31 @@
     "minecraft:white_bed": false
   },
   "bannedItems": {
-    "minecraft:mutton": false,
-    "minecraft:stone_axe": false,
     "minecraft:oak_log": false,
-    "minecraft:spruce_planks": false,
     "minecraft:iron_block": false,
     "minecraft:dirt": false,
+    "minecraft:iron_sword": false,
+    "minecraft:wooden_axe": false,
+    "minecraft:bread": false,
+    "tombstone:grave_key": false,
+    "minecraft:emerald": false,
+    "minecraft:air": false,
+    "minecraft:wooden_pickaxe": false,
+    "minecraft:stone_pickaxe": false,
+    "iceandfire:dragonbone": false,
+    "minecraft:mutton": false,
+    "minecraft:stone_axe": false,
+    "minecraft:spruce_planks": false,
     "minecraft:stick": false,
     "minecraft:lantern": false,
     "minecraft:stone_sword": false,
     "minecraft:cobblestone": false,
-    "minecraft:wooden_axe": false,
+    "minecraft:iron_pickaxe": false,
+    "minecraft:charcoal": false,
     "minecraft:gold_ingot": false,
     "minecraft:red_bed": false,
-    "minecraft:bread": false,
-    "tombstone:grave_key": false,
-    "minecraft:emerald": false,
     "minecraft:cooked_mutton": false,
-    "minecraft:air": false,
     "minecraft:spruce_log": false,
-    "minecraft:wooden_pickaxe": false,
-    "minecraft:stone_pickaxe": false,
-    "iceandfire:dragonbone": false,
     "tombstone:gift": false
   },
   "disableForAllTileEntities": false,
