--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -224,7 +224,13 @@
     "IceSpikesEnderman": true,
     "EntityNaga": true,
     "EntityGorgon": true,
-    "FlowerFieldsEnderman": true
+    "FlowerFieldsEnderman": true,
+    "CaveSpider": true,
+    "Sorcerer": true,
+    "FirelightNotDespawnEntity": true,
+    "MissionerEntity": true,
+    "EntityMurmur": true,
+    "EntityMurmurHead": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -357,7 +363,13 @@
     "IceSpikesEnderman": false,
     "EntityNaga": false,
     "EntityGorgon": false,
-    "FlowerFieldsEnderman": false
+    "FlowerFieldsEnderman": false,
+    "CaveSpider": false,
+    "Sorcerer": false,
+    "FirelightNotDespawnEntity": false,
+    "MissionerEntity": false,
+    "EntityMurmur": false,
+    "EntityMurmurHead": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -443,6 +455,9 @@
     "SilverqueenattackingEntity": 30.0,
     "NightmareStalkerEntity": 70.0,
     "BarrelZombieEntity": 30.0,
-    "MutantCreeper": 120.0
+    "MutantCreeper": 120.0,
+    "CaveSpider": 12.0,
+    "EnderMan": 40.0,
+    "TheheavyEntity": 110.0
   }
 }
