--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -44,6 +44,7 @@
     "minecraft:oak_trapdoor": false,
     "minecraft:oak_door": false,
     "minecraft:blue_ice": false,
+    "minecraft:hay_block": false,
     "iceandfire:chared_grass": false,
     "minecraft:iron_block": false,
     "minecraft:dirt": false,
@@ -67,16 +68,22 @@
     "minecraft:campfire": false,
     "minecraft:copper_ore": false,
     "minecraft:light_gray_carpet": false,
+    "minecraft:stone_brick_stairs": false,
     "minecraft:spruce_log": false,
     "minecraft:spruce_trapdoor": false,
     "minecraft:powder_snow": false,
+    "minecraft:cauldron": false,
     "minecraft:white_bed": false
   },
   "bannedItems": {
+    "minecraft:hay_block": false,
+    "minecraft:crafting_table": false,
     "minecraft:oak_log": false,
     "minecraft:iron_block": false,
     "minecraft:dirt": false,
     "minecraft:iron_sword": false,
+    "minecraft:diamond": false,
+    "minecraft:copper_ingot": false,
     "minecraft:wooden_axe": false,
     "minecraft:bread": false,
     "tombstone:grave_key": false,
@@ -87,6 +94,7 @@
     "iceandfire:dragonbone": false,
     "minecraft:mutton": false,
     "minecraft:stone_axe": false,
+    "minecraft:golden_axe": false,
     "minecraft:spruce_planks": false,
     "minecraft:stick": false,
     "minecraft:lantern": false,
@@ -98,7 +106,9 @@
     "minecraft:red_bed": false,
     "minecraft:cooked_mutton": false,
     "minecraft:spruce_log": false,
-    "tombstone:gift": false
+    "iceandfire:manuscript": false,
+    "tombstone:gift": false,
+    "minecraft:white_bed": false
   },
   "disableForAllTileEntities": false,
   "disableAutoRegisterNames": false
