--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -458,6 +458,9 @@
     "MutantCreeper": 120.0,
     "CaveSpider": 12.0,
     "EnderMan": 40.0,
-    "TheheavyEntity": 110.0
+    "TheheavyEntity": 110.0,
+    "TarantulaEntity": 24.0,
+    "Witch": 26.0,
+    "ThebidyEntity": 10.0
   }
 }
