--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -5,6 +5,7 @@
   "debugMode": false,
   "bannedBlocks": {
     "minecraft:crafting_table": false,
+    "sophisticatedbackpacks:backpack": false,
     "minecraft:oak_log": false,
     "minecraft:dark_oak_fence_gate": false,
     "minecraft:dark_oak_stairs": false,
@@ -17,6 +18,7 @@
     "iceandfire:copper_pile": false,
     "minecraft:air": false,
     "quark:yellow_blossom_leaves": false,
+    "minecraft:oak_stairs": false,
     "iceandfire:chared_dirt": false,
     "minecraft:stone_bricks": false,
     "minecraft:spruce_door": false,
@@ -45,6 +47,7 @@
     "minecraft:oak_door": false,
     "minecraft:blue_ice": false,
     "minecraft:hay_block": false,
+    "minecraft:beehive": false,
     "iceandfire:chared_grass": false,
     "minecraft:iron_block": false,
     "minecraft:dirt": false,
@@ -78,6 +81,7 @@
   "bannedItems": {
     "minecraft:hay_block": false,
     "minecraft:crafting_table": false,
+    "sophisticatedbackpacks:backpack": false,
     "minecraft:oak_log": false,
     "minecraft:iron_block": false,
     "minecraft:dirt": false,
@@ -104,6 +108,7 @@
     "minecraft:charcoal": false,
     "minecraft:gold_ingot": false,
     "minecraft:red_bed": false,
+    "minecraft:golden_apple": false,
     "minecraft:cooked_mutton": false,
     "minecraft:spruce_log": false,
     "iceandfire:manuscript": false,
