--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -461,6 +461,8 @@
     "TheheavyEntity": 110.0,
     "TarantulaEntity": 24.0,
     "Witch": 26.0,
-    "ThebidyEntity": 10.0
+    "ThebidyEntity": 10.0,
+    "TrollEntity": 50.0,
+    "Forgotten": 60.0
   }
 }
