--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -16,10 +16,12 @@
     "minecraft:coal_ore": false,
     "minecraft:white_carpet": false,
     "iceandfire:copper_pile": false,
+    "minecraft:calcite": false,
     "minecraft:air": false,
     "quark:yellow_blossom_leaves": false,
     "minecraft:oak_stairs": false,
     "iceandfire:chared_dirt": false,
+    "minecraft:dark_oak_slab": false,
     "minecraft:stone_bricks": false,
     "minecraft:spruce_door": false,
     "minecraft:spruce_fence": false,
@@ -34,30 +36,40 @@
     "minecraft:cobweb": false,
     "iceandfire:dread_stone_stairs": false,
     "minecraft:cobblestone_stairs": false,
+    "minecraft:diorite": false,
     "minecraft:stone": false,
     "minecraft:coal_block": false,
     "minecraft:sand": false,
     "minecraft:snow": false,
     "minecraft:stripped_spruce_log": false,
     "minecraft:red_bed": false,
+    "minecraft:stripped_dark_oak_wood": false,
     "minecraft:glass_pane": false,
     "iceandfire:dread_spawner": false,
     "iceandfire:chared_gravel": false,
+    "minecraft:polished_andesite_stairs": false,
     "minecraft:oak_trapdoor": false,
     "minecraft:oak_door": false,
+    "minecraft:mangrove_stairs": false,
     "minecraft:blue_ice": false,
     "minecraft:hay_block": false,
     "minecraft:beehive": false,
+    "minecraft:birch_door": false,
     "iceandfire:chared_grass": false,
     "minecraft:iron_block": false,
     "minecraft:dirt": false,
+    "minecraft:dark_oak_fence": false,
+    "minecraft:spruce_stairs": false,
     "minecraft:oak_slab": false,
     "iceandfire:gold_pile": false,
     "minecraft:glass": false,
     "iceandfire:dread_stone_bricks_mossy": false,
+    "minecraft:cyan_carpet": false,
     "minecraft:snow_block": false,
     "minecraft:ice": false,
     "minecraft:spruce_slab": false,
+    "minecraft:gray_carpet": false,
+    "minecraft:spawner": false,
     "iceandfire:dread_stone_bricks": false,
     "iceandfire:silver_pile": false,
     "minecraft:oak_planks": false,
@@ -72,7 +84,9 @@
     "minecraft:copper_ore": false,
     "minecraft:light_gray_carpet": false,
     "minecraft:stone_brick_stairs": false,
+    "minecraft:mangrove_trapdoor": false,
     "minecraft:spruce_log": false,
+    "minecraft:stripped_mangrove_wood": false,
     "minecraft:spruce_trapdoor": false,
     "minecraft:powder_snow": false,
     "minecraft:cauldron": false,
@@ -93,6 +107,7 @@
     "tombstone:grave_key": false,
     "minecraft:emerald": false,
     "minecraft:air": false,
+    "minecraft:oak_stairs": false,
     "minecraft:wooden_pickaxe": false,
     "minecraft:stone_pickaxe": false,
     "iceandfire:dragonbone": false,
