--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -4,72 +4,92 @@
   "blockRegenIntervalMillis": 1000,
   "debugMode": false,
   "bannedBlocks": {
-    "minecraft:crafting_table": false,
-    "sophisticatedbackpacks:backpack": false,
+    "minecraft:nether_brick_slab": false,
     "minecraft:oak_log": false,
-    "minecraft:dark_oak_fence_gate": false,
-    "minecraft:dark_oak_stairs": false,
-    "minecraft:quartz_block": false,
     "minecraft:stone_pressure_plate": false,
     "minecraft:mossy_cobblestone": false,
-    "minecraft:grass_block": false,
-    "minecraft:coal_ore": false,
-    "minecraft:white_carpet": false,
     "iceandfire:copper_pile": false,
     "minecraft:calcite": false,
-    "minecraft:air": false,
+    "minecraft:waxed_cut_copper_slab": false,
     "quark:yellow_blossom_leaves": false,
     "minecraft:oak_stairs": false,
-    "iceandfire:chared_dirt": false,
-    "minecraft:dark_oak_slab": false,
     "minecraft:stone_bricks": false,
-    "minecraft:spruce_door": false,
     "minecraft:spruce_fence": false,
     "minecraft:granite": false,
     "minecraft:dark_oak_door": false,
     "minecraft:oak_leaves": false,
     "minecraft:stone_brick_slab": false,
-    "minecraft:polished_andesite_slab": false,
     "minecraft:lantern": false,
-    "minecraft:cobblestone": false,
     "minecraft:brown_carpet": false,
-    "minecraft:cobweb": false,
-    "iceandfire:dread_stone_stairs": false,
     "minecraft:cobblestone_stairs": false,
-    "minecraft:diorite": false,
     "minecraft:stone": false,
-    "minecraft:coal_block": false,
     "minecraft:sand": false,
     "minecraft:snow": false,
-    "minecraft:stripped_spruce_log": false,
     "minecraft:red_bed": false,
-    "minecraft:stripped_dark_oak_wood": false,
     "minecraft:glass_pane": false,
-    "iceandfire:dread_spawner": false,
     "iceandfire:chared_gravel": false,
-    "minecraft:polished_andesite_stairs": false,
     "minecraft:oak_trapdoor": false,
-    "minecraft:oak_door": false,
-    "minecraft:mangrove_stairs": false,
     "minecraft:blue_ice": false,
     "minecraft:hay_block": false,
-    "minecraft:beehive": false,
     "minecraft:birch_door": false,
     "iceandfire:chared_grass": false,
     "minecraft:iron_block": false,
-    "minecraft:dirt": false,
     "minecraft:dark_oak_fence": false,
     "minecraft:spruce_stairs": false,
     "minecraft:oak_slab": false,
-    "iceandfire:gold_pile": false,
-    "minecraft:glass": false,
+    "minecraft:mangrove_slab": false,
     "iceandfire:dread_stone_bricks_mossy": false,
-    "minecraft:cyan_carpet": false,
     "minecraft:snow_block": false,
     "minecraft:ice": false,
     "minecraft:spruce_slab": false,
-    "minecraft:gray_carpet": false,
     "minecraft:spawner": false,
+    "minecraft:dirt_path": false,
+    "minecraft:white_wool": false,
+    "minecraft:campfire": false,
+    "minecraft:light_gray_carpet": false,
+    "minecraft:stone_brick_stairs": false,
+    "minecraft:spruce_log": false,
+    "minecraft:powder_snow": false,
+    "minecraft:cauldron": false,
+    "minecraft:white_bed": false,
+    "minecraft:crafting_table": false,
+    "sophisticatedbackpacks:backpack": false,
+    "minecraft:dark_oak_fence_gate": false,
+    "minecraft:dark_oak_stairs": false,
+    "minecraft:quartz_block": false,
+    "minecraft:grass_block": false,
+    "minecraft:coal_ore": false,
+    "minecraft:white_carpet": false,
+    "minecraft:cyan_bed": false,
+    "minecraft:birch_trapdoor": false,
+    "minecraft:air": false,
+    "minecraft:polished_deepslate_wall": false,
+    "iceandfire:chared_dirt": false,
+    "minecraft:dark_oak_slab": false,
+    "minecraft:spruce_door": false,
+    "minecraft:soul_lantern": false,
+    "minecraft:polished_andesite_slab": false,
+    "minecraft:smooth_quartz_stairs": false,
+    "minecraft:cobblestone": false,
+    "minecraft:cobweb": false,
+    "iceandfire:dread_stone_stairs": false,
+    "minecraft:diorite": false,
+    "minecraft:coal_block": false,
+    "minecraft:stripped_spruce_log": false,
+    "minecraft:stripped_dark_oak_wood": false,
+    "minecraft:red_nether_bricks": false,
+    "iceandfire:dread_spawner": false,
+    "minecraft:polished_andesite_stairs": false,
+    "minecraft:oak_door": false,
+    "minecraft:mangrove_stairs": false,
+    "minecraft:beehive": false,
+    "minecraft:dirt": false,
+    "minecraft:stripped_dark_oak_log": false,
+    "iceandfire:gold_pile": false,
+    "minecraft:glass": false,
+    "minecraft:dark_oak_trapdoor": false,
+    "minecraft:cyan_carpet": false,
+    "minecraft:gray_carpet": false,
     "iceandfire:dread_stone_bricks": false,
     "iceandfire:silver_pile": false,
     "minecraft:oak_planks": false,
@@ -77,20 +97,12 @@
     "minecraft:spruce_planks": false,
     "minecraft:andesite": false,
     "minecraft:dark_oak_planks": false,
-    "minecraft:dirt_path": false,
-    "minecraft:white_wool": false,
     "iceandfire:dread_stone_bricks_cracked": false,
-    "minecraft:campfire": false,
+    "minecraft:orange_wall_banner": false,
     "minecraft:copper_ore": false,
-    "minecraft:light_gray_carpet": false,
-    "minecraft:stone_brick_stairs": false,
     "minecraft:mangrove_trapdoor": false,
-    "minecraft:spruce_log": false,
     "minecraft:stripped_mangrove_wood": false,
-    "minecraft:spruce_trapdoor": false,
-    "minecraft:powder_snow": false,
-    "minecraft:cauldron": false,
-    "minecraft:white_bed": false
+    "minecraft:spruce_trapdoor": false
   },
   "bannedItems": {
     "minecraft:hay_block": false,
@@ -123,6 +135,7 @@
     "minecraft:charcoal": false,
     "minecraft:gold_ingot": false,
     "minecraft:red_bed": false,
+    "minecraft:stripped_dark_oak_wood": false,
     "minecraft:golden_apple": false,
     "minecraft:cooked_mutton": false,
     "minecraft:spruce_log": false,
