--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -230,7 +230,12 @@
     "FirelightNotDespawnEntity": true,
     "MissionerEntity": true,
     "EntityMurmur": true,
-    "EntityMurmurHead": true
+    "EntityMurmurHead": true,
+    "PhantomCreeperCopyEntity": true,
+    "EntityStymphalianBird": true,
+    "EntityCyclops": true,
+    "SwampZombieEntity": true,
+    "SwampSkeletonEntity": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -369,7 +374,12 @@
     "FirelightNotDespawnEntity": false,
     "MissionerEntity": false,
     "EntityMurmur": false,
-    "EntityMurmurHead": false
+    "EntityMurmurHead": false,
+    "PhantomCreeperCopyEntity": false,
+    "EntityStymphalianBird": false,
+    "EntityCyclops": false,
+    "SwampZombieEntity": false,
+    "SwampSkeletonEntity": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -463,6 +473,8 @@
     "Witch": 26.0,
     "ThebidyEntity": 10.0,
     "TrollEntity": 50.0,
-    "Forgotten": 60.0
+    "Forgotten": 60.0,
+    "EntityMurmur": 30.0,
+    "EntityStymphalianBird": 24.0
   }
 }
