--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -6,6 +6,7 @@
   "bannedBlocks": {
     "minecraft:nether_brick_slab": false,
     "minecraft:oak_log": false,
+    "minecraft:mud": false,
     "minecraft:stone_pressure_plate": false,
     "minecraft:mossy_cobblestone": false,
     "iceandfire:copper_pile": false,
@@ -38,11 +39,13 @@
     "minecraft:spruce_stairs": false,
     "minecraft:oak_slab": false,
     "minecraft:mangrove_slab": false,
+    "minecraft:gravel": false,
     "iceandfire:dread_stone_bricks_mossy": false,
     "minecraft:snow_block": false,
     "minecraft:ice": false,
     "minecraft:spruce_slab": false,
     "minecraft:spawner": false,
+    "ecologics:walnut_log": false,
     "minecraft:dirt_path": false,
     "minecraft:white_wool": false,
     "minecraft:campfire": false,
@@ -51,9 +54,11 @@
     "minecraft:spruce_log": false,
     "minecraft:powder_snow": false,
     "minecraft:cauldron": false,
+    "ecologics:walnut_leaves": false,
     "minecraft:white_bed": false,
     "minecraft:crafting_table": false,
     "sophisticatedbackpacks:backpack": false,
+    "minecraft:mossy_stone_bricks": false,
     "minecraft:dark_oak_fence_gate": false,
     "minecraft:dark_oak_stairs": false,
     "minecraft:quartz_block": false,
@@ -66,12 +71,14 @@
     "minecraft:polished_deepslate_wall": false,
     "iceandfire:chared_dirt": false,
     "minecraft:dark_oak_slab": false,
+    "minecraft:cracked_stone_bricks": false,
     "minecraft:spruce_door": false,
     "minecraft:soul_lantern": false,
     "minecraft:polished_andesite_slab": false,
     "minecraft:smooth_quartz_stairs": false,
     "minecraft:cobblestone": false,
     "minecraft:cobweb": false,
+    "minecraft:mossy_stone_brick_stairs": false,
     "iceandfire:dread_stone_stairs": false,
     "minecraft:diorite": false,
     "minecraft:coal_block": false,
@@ -99,8 +106,10 @@
     "minecraft:dark_oak_planks": false,
     "iceandfire:dread_stone_bricks_cracked": false,
     "minecraft:orange_wall_banner": false,
+    "minecraft:chiseled_stone_bricks": false,
     "minecraft:copper_ore": false,
     "minecraft:mangrove_trapdoor": false,
+    "minecraft:birch_leaves": false,
     "minecraft:stripped_mangrove_wood": false,
     "minecraft:spruce_trapdoor": false
   },
@@ -121,6 +130,7 @@
     "minecraft:air": false,
     "minecraft:oak_stairs": false,
     "minecraft:wooden_pickaxe": false,
+    "ecologics:walnut": false,
     "minecraft:stone_pickaxe": false,
     "iceandfire:dragonbone": false,
     "minecraft:mutton": false,
