--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -235,7 +235,16 @@
     "EntityStymphalianBird": true,
     "EntityCyclops": true,
     "SwampZombieEntity": true,
-    "SwampSkeletonEntity": true
+    "SwampSkeletonEntity": true,
+    "SwampEnderman": true,
+    "ToxicGatorEntity": true,
+    "SavannahZombieEntity": true,
+    "SavannahSkeletonEntity": true,
+    "Deepling_Entity": true,
+    "Deepling_Brute_Entity": true,
+    "Lionfish_Entity": true,
+    "Deepling_Angler_Entity": true,
+    "SavannaEnderman": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -379,7 +388,16 @@
     "EntityStymphalianBird": false,
     "EntityCyclops": false,
     "SwampZombieEntity": false,
-    "SwampSkeletonEntity": false
+    "SwampSkeletonEntity": false,
+    "SwampEnderman": false,
+    "ToxicGatorEntity": false,
+    "SavannahZombieEntity": false,
+    "SavannahSkeletonEntity": false,
+    "Deepling_Entity": false,
+    "Deepling_Brute_Entity": false,
+    "Lionfish_Entity": false,
+    "Deepling_Angler_Entity": false,
+    "SavannaEnderman": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -475,6 +493,13 @@
     "TrollEntity": 50.0,
     "Forgotten": 60.0,
     "EntityMurmur": 30.0,
-    "EntityStymphalianBird": 24.0
+    "EntityStymphalianBird": 24.0,
+    "SwampZombieEntity": 25.0,
+    "MissionerEntity": 150.0,
+    "SwampSkeletonEntity": 25.0,
+    "SiameseSkeletonsleftEntity": 10.0,
+    "InvisiimmortalEntity": 100.0,
+    "Deepling_Brute_Entity": 65.0,
+    "SavannahSkeletonEntity": 25.0
   }
 }
