--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -30,6 +30,7 @@
     "minecraft:glass_pane": false,
     "iceandfire:chared_gravel": false,
     "minecraft:oak_trapdoor": false,
+    "minecraft:spruce_fence_gate": false,
     "minecraft:blue_ice": false,
     "minecraft:hay_block": false,
     "minecraft:birch_door": false,
@@ -40,11 +41,13 @@
     "minecraft:oak_slab": false,
     "minecraft:mangrove_slab": false,
     "minecraft:gravel": false,
+    "minecraft:vine": false,
     "iceandfire:dread_stone_bricks_mossy": false,
     "minecraft:snow_block": false,
     "minecraft:ice": false,
     "minecraft:spruce_slab": false,
     "minecraft:spawner": false,
+    "minecraft:blue_bed": false,
     "ecologics:walnut_log": false,
     "minecraft:dirt_path": false,
     "minecraft:white_wool": false,
@@ -92,6 +95,7 @@
     "minecraft:beehive": false,
     "minecraft:dirt": false,
     "minecraft:stripped_dark_oak_log": false,
+    "minecraft:iron_bars": false,
     "iceandfire:gold_pile": false,
     "minecraft:glass": false,
     "minecraft:dark_oak_trapdoor": false,
@@ -101,6 +105,7 @@
     "iceandfire:silver_pile": false,
     "minecraft:oak_planks": false,
     "minecraft:spruce_leaves": false,
+    "minecraft:oak_fence": false,
     "minecraft:spruce_planks": false,
     "minecraft:andesite": false,
     "minecraft:dark_oak_planks": false,
