--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -244,7 +244,10 @@
     "Deepling_Brute_Entity": true,
     "Lionfish_Entity": true,
     "Deepling_Angler_Entity": true,
-    "SavannaEnderman": true
+    "SavannaEnderman": true,
+    "GluttonFishEntity": true,
+    "KingCrabEntity": true,
+    "TreantEntity": true
   },
   "entitiesalwaysinfernal": {
     "Drowned": false,
@@ -397,7 +400,10 @@
     "Deepling_Brute_Entity": false,
     "Lionfish_Entity": false,
     "Deepling_Angler_Entity": false,
-    "SavannaEnderman": false
+    "SavannaEnderman": false,
+    "GluttonFishEntity": false,
+    "KingCrabEntity": false,
+    "TreantEntity": false
   },
   "entitybasehealth": {
     "Zombie": 20.0,
@@ -500,6 +506,11 @@
     "SiameseSkeletonsleftEntity": 10.0,
     "InvisiimmortalEntity": 100.0,
     "Deepling_Brute_Entity": 65.0,
-    "SavannahSkeletonEntity": 25.0
+    "SavannahSkeletonEntity": 25.0,
+    "Deepling_Angler_Entity": 30.0,
+    "GluttonFishEntity": 90.0,
+    "BloodyGadflyEntity": 20.0,
+    "MutantZombie": 150.0,
+    "ThegliterEntity": 30.0
   }
 }
