--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -12,9 +12,12 @@
     "iceandfire:copper_pile": false,
     "minecraft:calcite": false,
     "minecraft:waxed_cut_copper_slab": false,
+    "luminousworld:whiteoakleaves": false,
     "quark:yellow_blossom_leaves": false,
     "minecraft:oak_stairs": false,
+    "minecraft:black_bed": false,
     "minecraft:stone_bricks": false,
+    "minecraft:petrified_oak_slab": false,
     "minecraft:spruce_fence": false,
     "minecraft:granite": false,
     "minecraft:dark_oak_door": false,
@@ -95,6 +98,7 @@
     "minecraft:beehive": false,
     "minecraft:dirt": false,
     "minecraft:stripped_dark_oak_log": false,
+    "luminousworld:yellow_birch_leaves": false,
     "minecraft:iron_bars": false,
     "iceandfire:gold_pile": false,
     "minecraft:glass": false,
@@ -103,6 +107,7 @@
     "minecraft:gray_carpet": false,
     "iceandfire:dread_stone_bricks": false,
     "iceandfire:silver_pile": false,
+    "minecraft:stripped_oak_log": false,
     "minecraft:oak_planks": false,
     "minecraft:spruce_leaves": false,
     "minecraft:oak_fence": false,
@@ -113,6 +118,7 @@
     "minecraft:orange_wall_banner": false,
     "minecraft:chiseled_stone_bricks": false,
     "minecraft:copper_ore": false,
+    "iceandfire:silver_ore": false,
     "minecraft:mangrove_trapdoor": false,
     "minecraft:birch_leaves": false,
     "minecraft:stripped_mangrove_wood": false,
@@ -128,6 +134,7 @@
     "minecraft:iron_sword": false,
     "minecraft:diamond": false,
     "minecraft:copper_ingot": false,
+    "iceandfire:gorgon_head": false,
     "minecraft:wooden_axe": false,
     "minecraft:bread": false,
     "tombstone:grave_key": false,
@@ -138,6 +145,7 @@
     "ecologics:walnut": false,
     "minecraft:stone_pickaxe": false,
     "iceandfire:dragonbone": false,
+    "minecraft:oak_planks": false,
     "minecraft:mutton": false,
     "minecraft:stone_axe": false,
     "minecraft:golden_axe": false,
