--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -18,6 +18,7 @@
     "minecraft:black_bed": false,
     "minecraft:stone_bricks": false,
     "minecraft:petrified_oak_slab": false,
+    "supplementaries:urn": false,
     "minecraft:spruce_fence": false,
     "minecraft:granite": false,
     "minecraft:dark_oak_door": false,
@@ -31,6 +32,7 @@
     "minecraft:snow": false,
     "minecraft:red_bed": false,
     "minecraft:glass_pane": false,
+    "luminousworld:ishstone": false,
     "iceandfire:chared_gravel": false,
     "minecraft:oak_trapdoor": false,
     "minecraft:spruce_fence_gate": false,
@@ -98,6 +100,7 @@
     "minecraft:beehive": false,
     "minecraft:dirt": false,
     "minecraft:stripped_dark_oak_log": false,
+    "born_in_chaos_v1:black_argillite": false,
     "luminousworld:yellow_birch_leaves": false,
     "minecraft:iron_bars": false,
     "iceandfire:gold_pile": false,
@@ -108,7 +111,9 @@
     "iceandfire:dread_stone_bricks": false,
     "iceandfire:silver_pile": false,
     "minecraft:stripped_oak_log": false,
+    "minecraft:obsidian": false,
     "minecraft:oak_planks": false,
+    "born_in_chaos_v1:chipped_black_argillite_brick": false,
     "minecraft:spruce_leaves": false,
     "minecraft:oak_fence": false,
     "minecraft:spruce_planks": false,
@@ -132,13 +137,17 @@
     "minecraft:iron_block": false,
     "minecraft:dirt": false,
     "minecraft:iron_sword": false,
+    "minecraft:wheat_seeds": false,
     "minecraft:diamond": false,
     "minecraft:copper_ingot": false,
     "iceandfire:gorgon_head": false,
     "minecraft:wooden_axe": false,
+    "hangglider:hang_glider": false,
+    "minecraft:gravel": false,
     "minecraft:bread": false,
     "tombstone:grave_key": false,
     "minecraft:emerald": false,
+    "ecologics:coconut_husk": false,
     "minecraft:air": false,
     "minecraft:oak_stairs": false,
     "minecraft:wooden_pickaxe": false,
@@ -157,6 +166,7 @@
     "minecraft:iron_pickaxe": false,
     "minecraft:charcoal": false,
     "minecraft:gold_ingot": false,
+    "minecraft:flint": false,
     "minecraft:red_bed": false,
     "minecraft:stripped_dark_oak_wood": false,
     "minecraft:golden_apple": false,
