--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -31,7 +31,9 @@
     "minecraft:sand": false,
     "minecraft:snow": false,
     "minecraft:red_bed": false,
+    "born_in_chaos_v1:carved_black_argillite": false,
     "minecraft:glass_pane": false,
+    "minecraft:amethyst_block": false,
     "luminousworld:ishstone": false,
     "iceandfire:chared_gravel": false,
     "minecraft:oak_trapdoor": false,
@@ -59,7 +61,9 @@
     "minecraft:campfire": false,
     "minecraft:light_gray_carpet": false,
     "minecraft:stone_brick_stairs": false,
+    "minecraft:budding_amethyst": false,
     "minecraft:spruce_log": false,
+    "minecraft:smooth_basalt": false,
     "minecraft:powder_snow": false,
     "minecraft:cauldron": false,
     "ecologics:walnut_leaves": false,
@@ -150,6 +154,7 @@
     "ecologics:coconut_husk": false,
     "minecraft:air": false,
     "minecraft:oak_stairs": false,
+    "tombstone:christmas_gift": false,
     "minecraft:wooden_pickaxe": false,
     "ecologics:walnut": false,
     "minecraft:stone_pickaxe": false,
