--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -511,6 +511,7 @@
     "GluttonFishEntity": 90.0,
     "BloodyGadflyEntity": 20.0,
     "MutantZombie": 150.0,
-    "ThegliterEntity": 30.0
+    "ThegliterEntity": 30.0,
+    "EntityMurmurHead": 30.0
   }
 }
