--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -131,7 +131,8 @@
     "minecraft:mangrove_trapdoor": false,
     "minecraft:birch_leaves": false,
     "minecraft:stripped_mangrove_wood": false,
-    "minecraft:spruce_trapdoor": false
+    "minecraft:spruce_trapdoor": false,
+    "minecraft:emerald_ore": false
   },
   "bannedItems": {
     "minecraft:hay_block": false,
